# pandas_text_translation

./: README.md  pyproject.toml  setup.py  translation_example.ipynb
test/: translate_dataframe_test.py  translation_model_test.py  utils_test.py
text_translation/: translate_columns.py  translate_dataframe.py  translation_model.py  utils.py
