[tool.poetry]
name = "text_translation"
version = "0.1.0"
description = "Package to translate text with transformers"
authors = ["lecover <erwan.lecovec@konecranes.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.1.3"
transformers = "4.17.0"
pytest = "^6.2.2"
numpy = "^1.19.5"
langdetect = "^1.0.9"
sentencepiece = "^0.1.96"
poethepoet = "^0.10.0"
tqdm = "^4.63.1"
langid = "^1.1.6"
fasttext = "^0.9.2"
datasets = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"
ipykernel = "^6.10.0"
pytest = "^6.2.4"
pytest-cov = "^2.11.1"

[tool.poe.tasks]
force-cuda10 = "python -m pip install torch==1.9.0+cu102 -f https://download.pytorch.org/whl/torch_stable.html"

[[tool.poetry.source]]
name = "dsl_packages"
url = "https://eukcdatasciencedev01.northeurope.cloudapp.azure.com/pypi-server/"